--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,33 +133,40 @@
               </p>
               
               <p align="justify">
-                My core interests lie at the intersection of robotics, 3D perception, machine learning, and physics simulation — with hands-on experience in developing and deploying research-driven solutions across these domains.
+                My core interests spans <b>robotics</b>, <b></b>3D perception</b>, <b>machine learning</b>, and <b>physics simulation</b> — with hands-on experience in developing and deploying research-driven solutions across these domains.
               </p>
 
-              <p>
+              <p align="justify">
                 I'm currently building a startup in 3D content generation and also consult AI-focused startups. 
                 You're welcome to <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer"
-                  style="color:#800020">set up a call</a></i></b></u> if you'd like to chat about research startups, robotics, 3D vision, LLMs, or potential collaborations.
+                  style="color: purple">set up a call</a></i></b></u> if you'd like to chat about research startups, robotics, 3D vision, LLMs, or potential collaborations.
+              </p>
+              
+              <p>
+                <span style="color:red;"><b>Open to PhD/R&D Roles - feel free to connect if my work interests you!</b></span>
               </p>
               
               
 
-              <p style="text-align:center; font-size: 1.07rem; font-weight: 500;">
+              <p style="text-align:center; font-size: 18px; font-weight: 500;">
                 <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <!--a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;-->
                 <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
                 <a href="https://x.com/rafaymhddn/"> X</a> 
-                <!--a href="https://docs.google.com/presentation/d/195oGdjiIu9wtpmKJv1UpIYOMxiqWwR7RjWyqHicgO-w/edit?usp=sharing" target="_blank"> CV </a--> 
               </p>
+              
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
               <a href="images/dp24of.jpeg"><img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
+        
         </table>
         <hr class="soft">
+
+       
 
 
 <!-- News -->
