--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,13 +133,13 @@
               </p>
               
               <p align="justify">
-                My core interests spans <b>robotics</b>, <b></b>3D perception</b>, <b>machine learning</b>, and <b>physics simulation</b> — with hands-on experience in developing and deploying research-driven solutions across these domains.
+                My core interests spans <b>robotics</b>, <b>3D vision</b>, <b>machine learning</b>, and <b>physics simulation</b> — with hands-on experience in developing and deploying research-driven solutions across these domains.
               </p>
 
               <p align="justify">
                 I'm currently building a startup in 3D content generation and also consult AI-focused startups. 
                 You're welcome to <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer"
-                  style="color: purple">set up a call</a></i></b></u> if you'd like to chat about research startups, robotics, 3D vision, LLMs, or potential collaborations.
+                  style="color: purple">set up a call</a></i></b></u> if you'd like to chat about research startups, robotics, 3D vision, LLMs or potential collaborations.
               </p>
               
               <p>
@@ -149,12 +149,12 @@
               
 
               <p style="text-align:center; font-size: 18px; font-weight: 500;">
-                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
+                <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank"><b>Email</b></a> &nbsp;/&nbsp;
+                <a href="https://github.com/rafaymhddn"><b>GitHub</b></a> &nbsp;/&nbsp;
                 <!--a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;-->
-                <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://x.com/rafaymhddn/"> X</a> 
+                <a href="https://scholar.google.com/citations?user=dOFWyvoAAAAJ&hl=en"><b>Scholar</b></a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/rafaymhddn/"><b>LinkedIn</b></a> &nbsp;/&nbsp;
+                <a href="https://x.com/rafaymhddn/"><b>X</b></a> 
               </p>
               
             </td>
