--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,9 +158,11 @@
               </p>
               
             </td>
-            <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/dp24of.jpeg"><img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
-            </td>
+            <td style="padding:2.5%;width:30%;max-width:30%; vertical-align: top;">
+                <a href="images/dp24of.jpeg">
+                  <img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo" class="hoverZoomLink"/>
+                </a>              
+              </td>
           </tr>
         
         </table>
