--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,10 +159,13 @@
               
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%; vertical-align: top;">
-                <a href="images/dp24of.jpeg">
-                  <img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo" class="hoverZoomLink"/>
-                </a>              
+                <div style="margin-top:12px;">  <!-- fine-tune this value -->
+                  <a href="images/dp24of.jpeg">
+                    <img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo" class="hoverZoomLink"/>
+                  </a>              
+                </div>
               </td>
+              
           </tr>
         
         </table>
