--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@
               </p>
               
               <p align="justify">
-                My core interests spans <b>robotics</b>, <b>3D vision</b>, <b>machine learning</b>, and <b>physics simulation</b> — with hands-on experience in developing and deploying research-driven solutions across these domains.
+                My research interests spans <b>robotics</b>, <b>3D vision</b>, <b>machine learning</b>, and <b>physics simulation</b> — with hands-on experience in developing and deploying research-driven solutions across these domains.
               </p>
 
               <p align="justify">
@@ -158,7 +158,7 @@
               </p>
               
             </td>
-            <td style="padding:2.5%;width:30%;max-width:30%; vertical-align: top;">
+            <td style="padding:6.5%;width:30%;max-width:30%; vertical-align: top;">
                 <div style="margin-top:12px;">  <!-- fine-tune this value -->
                   <a href="images/dp24of.jpeg">
                     <img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo" class="hoverZoomLink"/>
