--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
           <tr style="padding:0px">                                    
             <td style="padding:0%;width:63%;vertical-align:middle">
               <p style="text-align:center;margin:0;">
-                <h1 style="font-size: 40px;text-align:center;margin:0;"><name>Rafay Mohiuddin (Bajwa)</name></h1>
+                <h1 style="font-size: 40px;text-align:center;margin:0;"><name>Rafay Mohiuddin</name></h1>
               </p>
             </td>
           </tr>            
@@ -687,24 +687,22 @@
                   🔗 <a href="https://linkedin.com/in/rafaymhddn/">linkedin.com/in/rafaymhddn/</a><br>
                   🌐 <a href="https://rafaymhddn.github.io/">rafaymhddn.github.io/</a>
                 </p>
-            </p>
                 
-            <!-- Cal inline embed code begins -->
-            <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
-            <script type="text/javascript">
-              (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-              Cal("init", "quickchat", {origin:"https://cal.com"});
+                <!-- Cal inline embed code begins -->
+                <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
+                <script type="text/javascript">
+                  (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+                  Cal("init", "quickchat", {origin:"https://cal.com"});
 
-              Cal.ns.quickchat("inline", {
-                elementOrSelector:"#my-cal-inline",
-                config: {"layout":"month_view"},
-                calLink: "rafaymhddn/quickchat",
-              });
+                  Cal.ns.quickchat("inline", {
+                    elementOrSelector:"#my-cal-inline",
+                    config: {"layout":"month_view"},
+                    calLink: "rafaymhddn/quickchat",
+                  });
 
-              Cal.ns.quickchat("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
-            </script>
-            <!-- Cal inline embed code ends -->
-          
+                  Cal.ns.quickchat("ui", {"hideEventTypeDetails":true,"layout":"month_view"});
+                </script>
+                <!-- Cal inline embed code ends -->
               </td>
             </tr>
           </table>
