--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -611,7 +611,7 @@
             <tr>
               <td style="padding:2.5%;width:100%;vertical-align:left">
                 <p style="text-align:left; font-size: 0.9rem; line-height: 1.4;">
-                  <b>Rafay Mohiuddin</b> | M.Sc. TUM<br>
+                  <b>Rafay Mohiuddin | M.Sc. TUM<br>
                   📍 Munich, Germany<br>
                   ✉️ <a href="mailto:rafay.mhddn@gmail.com">rafay.mhddn[at]gmail.com</a><br>
                   🔗 <a href="https://linkedin.com/in/rafaymhddn/">linkedin.com/in/rafaymhddn/</a><br>
@@ -625,7 +625,7 @@
             <tbody>
               <tr>
                 <td>
-                  <heading>Schedule a Meeting</heading>
+                  <heading><b>Schedule a Meeting</b></heading>
                   <!-- Cal inline embed code begins -->
                   <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
                   <script type="text/javascript">
