--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -626,21 +626,19 @@
               <tr>
                 <td>
                   <heading><b>Schedule a Meeting</b></heading>
-                  <!-- Cal inline embed code begins -->
-                  <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
+                  <p style="text-align:center; font-size: 1.1rem;">
+                    Click the calendar icon in the bottom-left corner to schedule a meeting
+                  </p>
+                  
+                  <!-- Cal floating-popup embed code begins -->
                   <script type="text/javascript">
                     (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-                  Cal("init", "30min", {origin:"https://cal.com"});
+                    Cal("init", "quickchat", {origin:"https://cal.com"});
 
-                    Cal.ns.quickchat("inline", {
-                      elementOrSelector:"#my-cal-inline",
-                      config: {"layout":"month_view"},
-                      calLink: "rafaymhddn/quickchat",
-                    });
-
-                    Cal.ns.quickchat("ui", {"styles":{"branding":{"brandColor":"#000000"}},"hideEventTypeDetails":flase,"layout":"month_view"});
+                    Cal.ns.quickchat("floatingButton", {"calLink":"rafaymhddn/quickchat","config":{"layout":"month_view","theme":"dark"},"buttonPosition":"bottom-left","hideButtonIcon":false}); 
+                    Cal.ns.quickchat("ui", {"theme":"dark","hideEventTypeDetails":false,"layout":"month_view"});
                   </script>
-                  <!-- Cal inline embed code ends -->
+                  <!-- Cal floating-popup embed code ends -->
                 </td>
               </tr>
             </tbody>
