--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -621,35 +621,26 @@
             </tr>
           </table>
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;" cellspacing="0" cellpadding="20">
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;" cellspacing="0" cellpadding="20" id="office-hours">
             <tbody>
               <tr>
                 <td>
-
-                  <div style="text-align:left; margin: 20px 0;">
-                    <a href="#" 
-                       data-cal-link="rafaymhddn/quickchat"
-                       data-cal-namespace="quickchat"
-                       data-cal-config='{"layout":"month_view","theme":"dark"}'
-                       <!-- Cal embed code begins -->
-                       <script type="text/javascript">
-                         (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-                         Cal("init", "quickchat", {origin:"https://cal.com"});
-
-                         Cal.ns.quickchat("ui", {"theme":"dark","hideEventTypeDetails":false,"layout":"month_view"});
-                       </script>
-                       <!-- Cal embed code ends -->
-                    </a>
-                  </div>
-                  
-                  <!-- Cal element-click embed code begins -->
+                  <heading>Office Hours</heading>
+                  <!-- Cal inline embed code begins -->
+                  <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
                   <script type="text/javascript">
                     (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-                    Cal("init", "quickchat", {origin:"https://cal.com"});
+                    Cal("init", "30min", {origin:"https://cal.com"});
 
-                    Cal.ns.quickchat("ui", {"theme":"dark","hideEventTypeDetails":false,"layout":"month_view"});
+                    Cal.ns["30min"]("inline", {
+                      elementOrSelector:"#my-cal-inline",
+                      config: {"layout":"month_view"},
+                      calLink: "rafaymhddn/quickchat",
+                    });
+
+                    Cal.ns["30min"]("ui", {"styles":{"branding":{"brandColor":"#000000"}},"hideEventTypeDetails":false,"layout":"month_view"});
                   </script>
-                  <!-- Cal element-click embed code ends -->
+                  <!-- Cal inline embed code ends -->
                 </td>
               </tr>
             </tbody>
