--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,9 +137,9 @@
               </p>
 
               <p align="justify">
-                I'm currently building a startup in 3D content generation and also consult AI-focused startups. 
-                You're welcome to <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer"
-                  style="color: purple">set up a call</a></i></b></u> if you'd like to chat about research startups, robotics, 3D vision, LLMs or potential collaborations.
+                I'm currently building a 3D content generation startup and also consult AI-focused startups. 
+                Feel free to <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer"
+                  style="color: purple">set up a call</a></i></b></u> if you'd like to chat about research/startups, robotics, 3D vision, LLMs or potential collaborations.
               </p>
               
               <p>
