--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,9 +137,8 @@
               </p>
 
               <p align="justify">
-                I'm currently building a 3D content generation startup and also consult AI-focused startups. 
-                Feel free to <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer"
-                  style="color: purple">set up a call</a></i></b></u> if you'd like to chat about research/startups, robotics, 3D vision, LLMs or potential collaborations.
+                I'm currently working on a <a href="https://remesh.space/">3D generation</a> related startup, and also consult and collobrate with AI-focused startups.
+                <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer" style="color: purple">Feel free to set up a call</a></i></b></u> — I’m happy to discuss research, startups, robotics, 3D vision, LLMs, or potential collaborations.
               </p>
               
               <p>
