--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -423,7 +423,7 @@
             Oct 2021 - Oct 2024
             <br>
             <p align="justify">
-                Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
+                Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D (ICRA'25)</a>
                 <br>
                 <b>Course Work:</b>
                 <ul>
@@ -458,7 +458,7 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">Link</a>
+              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">Web Link</a>
               <br>
                 <b>Course Work:</b>
                 <ul>
