--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -222,6 +222,22 @@
 
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+          <div class="one">
+              <img src='images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
+          </div>
+      </td>
+      <td style="padding:2.5%;width:75%;vertical-align:top">       
+          <papertitle><big><b>ANTLER</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Entrepreneur in Residence </big></papertitle><papertitle><big>- Spring 2025 Cohort</big></papertitle>
+          <br>
+          Mar 2025 - Jun 2025
+          <br>
+      </td>
+  </tr>
+
+  <tr>
+    <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
             <img src='images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
         </div>
