--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -223,7 +223,7 @@
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
+              <img src='images/antler_logo.png' style="width:70%; height:auto;" alt="project image">
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">       
