--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,7 +138,7 @@
 
               <p align="justify">
                 I'm currently working on a <a href="https://remesh.space/">3D generation</a> related startup, and also consult and collobrate with AI-focused startups.
-                <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer" style="color: purple">Feel free to set up a call</a></i></b></u> — I’m happy to discuss research, startups, robotics, 3D vision, LLMs, or potential collaborations.
+                <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer" style="color: purple">Feel free to set up a call</a></i></b></u> — I'm happy to discuss research, startups, robotics, 3D vision, LLMs, or potential collaborations.
               </p>
               
               <p>
@@ -221,7 +221,7 @@
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
   <tr>
-    <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+    <td style="padding:0.5em;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
               <img src='images/antler_logo.png' style="width:70%; height:auto;" alt="project image">
           </div>
@@ -235,6 +235,8 @@
           <br>
       </td>
   </tr>
+
+
 
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
@@ -288,7 +290,7 @@
   </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+      <td style="padding:0.5em;width:25%;vertical-align:top;text-align:center;min-width:120px">
             <div class="one">
                 <img src='images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
             </div>
@@ -344,7 +346,7 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+      <td style="padding:0.5em;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
               <img src='images/nust-logo.png' style="width:70%; height:auto;" alt="project image">
           </div>
@@ -380,7 +382,7 @@
   </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+      <td style="padding:0.5em;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
               <img src='images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
           </div>
