--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -219,7 +219,7 @@
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
-            <img src='images/antler_logo.png' style="width:70%; height:auto;" alt="project image">
+            <img src='images/antler_logo.png' style="width:70%;" alt="project image">
         </div>
     </td>
     <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -232,25 +232,11 @@
         <br>
     </td>
   </tr>
+
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
-            <img src='images/antler_logo.png' style="width:70%; height:auto;" alt="project image">
-        </div>
-    </td>
-    <td style="padding:2.5%;width:75%;vertical-align:top;margin-top:-20px">
-        <papertitle><big><b>ANTLER</b></big></papertitle>
-        <br>
-        <papertitle style="color:gray"><big>Entrepreneur in Residence </big></papertitle><papertitle><big>- Spring 2025 Cohort</big></papertitle>
-        <br>
-        Mar 2025 - Jun 2025
-        <br>
-    </td>
-  </tr>
-  <tr>
-    <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-        <div class="one">
-            <img src='images/huawei-logo.png' style="width:70%; height:auto;" alt="project image">
+            <img src='images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
         </div>
     </td>
     <td style="padding:2.5%;width:75%;vertical-align:top">
