--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -216,7 +216,7 @@
 
 <!--table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"-->
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-  <tr>
+  <tr style="padding-top: 0; padding-bottom: 0;">
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
             <img src='images/antler_logo.png' style="width:70%;" alt="project image">
@@ -284,7 +284,7 @@
     </td>
   </tr>
 
-    <tr>
+    <tr >
       <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
             <div class="one">
                 <img src='images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
