--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -233,7 +233,7 @@
     </td>
   </tr>
 
-  <tr>
+  <tr style="padding-top: 0; padding-bottom: 0;">
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
             <img src='images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
