--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -212,7 +212,7 @@
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-experience" id="experience">
   <h2>Experience</h2>
 </button>
-<div id="content-experience" class="collapse in">
+<div id="content-experience">
 
 <!--table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"-->
 <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
