--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,7 +170,16 @@
         </table>
         <hr class="soft">
 
-       
+
+<!-- Banner -->
+
+<div id="content-news" class="collapse in">
+<div style="display: flex; justify-content: center; align-items: center; height: 100px;">
+  <img src="images/banner_gif.gif" alt="Fun Banner Gif" style="max-width: 90px; border-radius: 8px;">
+</div>
+</div>
+<hr class="soft">
+         
 
 
 <!-- News -->
