--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -175,7 +175,7 @@
 
 <div id="content-news" class="collapse in">
 <div style="display: flex; justify-content: center; align-items: center;">
-  <img src="images/banner_gif.gif" alt="Fun Banner Gif">
+  <img src="images/banner_gif.gif" alt="Fun Banner Gif", style="padding:2.5%;width:95%;max-width:95%";>
 </div>
 </div>
 <hr class="soft">
