--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#news" class="nav-link" onclick="Expand('news')">News</a></li>
-                <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
                 <li class="nav-item"><a href="#experience" class="nav-link" onclick="Expand('experience')">Experience</a></li>
                 <li class="nav-item"><a href="#publications" class="nav-link" onclick="Expand('publications')">Publications</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link" onclick="Expand('projects')">Projects</a></li>
@@ -225,9 +225,7 @@
             </ul>
           </details>
         </p>
-        <div style="text-align: center;">
-          <img src="images/thesis_3.gif" alt="thesis_3" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
-        </div>
+
         
     </td>
   </tr>
@@ -265,25 +263,8 @@
                 </ul>
               </details>
             </p>
-                <div style="text-align: center;">
-                  <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
-                </div>
-                <div class="row">
-                  <div class="column">
-                    
-                    <!--img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
-                    <img src="images/carto.png" alt="carto" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"-->
-                    
-                    <!--div style="display:flex; flex-direction:row; text-align: center;">
-                      <img src="images/robot_walk_4.gif" alt="go1" style="flex:1;width:90px; height:180px; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/gazebo_3.gif" alt="gazebo" style="flex:1; width: 120; height:180px; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/carto.png" alt="carto" style="flex:1; height:180px; border-radius: 5%; border: 2px solid #555">
-                      
-                      
-                    </div-->
-                    <!--img src="images/wavefront_1.gif" alt="wavefront" style="width:30%; height:auto; border-radius: 5%; border: 2px solid #555"-->
-                  </div>                  
-                </div>
+
+                
             
         </td>
     </tr>
@@ -314,13 +295,7 @@
             </details>
             </p>
           
-          <div class="row">
-            <div class="column">
-              <div style="text-align: center;">
-                <img src="images/vtol_4.gif" alt="vtol" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555">
-              </div>
-            </div>                  
-          </div>
+         
       </td>
   </tr>
 
@@ -349,12 +324,7 @@
                   <li align="justify">Mentored undergraduate student groups, on their research project.</li>
               </ul>
             </details>
-          </p>
-              <div style="text-align: center;">
-                <img src="images/cfd_jet.gif" alt="cfd" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
-              </div>
-          
-          
+          </p>         
       </td>
   </tr>
 
