updated, in progress

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3NEVL70KSZ"></script>
+  
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -35,7 +36,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#news" class="nav-link" onclick="Expand('news')">News</a></li>
-                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
                 <li class="nav-item"><a href="#experience" class="nav-link" onclick="Expand('experience')">Experience</a></li>
                 <li class="nav-item"><a href="#publications" class="nav-link" onclick="Expand('publications')">Publications</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link" onclick="Expand('projects')">Projects</a></li>
@@ -80,11 +81,9 @@
                 <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer" style="color: purple">Feel free to set up a call</a></i></b></u> — I'm happy to discuss research, startups, robotics, 3D vision, LLMs, or potential collaborations.
               </p>
               
-              <!--p>
+              <p>
                 <span style="color:red;"><b>Open to PhD/R&D Roles - feel free to connect if my work interests you!</b></span>
-              </p-->
-              
-              
+              </p>
 
               <p style="text-align:center; font-size: 18px; font-weight: 500;">
                 <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank"><b>Email</b></a> &nbsp;/&nbsp;
@@ -161,8 +160,6 @@
 
 
 <!-- Education -->
-
-
 
 
         
