updated, in progress

--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -61,7 +61,7 @@
       <tr>
           <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
               
-                  <img src='images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
+                  <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
               
           </td>
           <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -96,7 +96,7 @@
       <tr>
         <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;min-width:120px">
             <div class="one">
-                <img src='images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
+                <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
             </div>
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
