--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -45,7 +45,7 @@
   </div>
 
 
-        <!-- Experience Section -->
+<!-- Experience Section -->
 
 
     
@@ -133,7 +133,7 @@
              
               <papertitle><big><b>Technical University of Munich</b></big></papertitle>
               <br>
-              <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
+              <papertitle style="color:gray"><big>HiWi </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
               <br>
               Apr 2022 - Apr 2023
               <br>
@@ -226,7 +226,7 @@
   <hr class="soft">
 
 
-        <!-- Experience Section -->
+<!-- Experience Section -->
 
 
     
