simple edu added

--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -51,15 +51,15 @@
   <div id="content-education" class="collapse in">
     <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto;">
       <tr>
-        <td style="padding: 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
+        <td style="padding: 2.5% 2.5% 0.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
           <div class="one">
             <img src='{{ site.baseurl }}/images/tum-logo.png' style="width: 40%; height: auto;" alt="Technical University of Munich logo">
           </div>
         </td>
-        <td style="padding: 2.5%; width: 85%; vertical-align: top;">
+        <td style="padding: 2.5% 2.5% 0.5% 2.5%; width: 85%; vertical-align: top;">
           <papertitle><big><b>M.Sc - Technical University of Munich</b></big></papertitle>
           <br>
-          Oct 2021 - Aug 2024
+          <span style="color: grey; font-size: 0.9em;">Munich, Germany - Oct 2021 - Aug 2024</span>
           <br>
           <p align="justify">
             Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/"> (IEEE, ICRA 2025)</a>
@@ -67,15 +67,15 @@
         </td>
       </tr>
       <tr>
-        <td style="padding: 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
+        <td style="padding: 0.5% 2.5% 2.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
           <div class="one">
             <img src='{{ site.baseurl }}/images/ned-logo.png' style="width: 40%; height: auto;" alt="NED University of Engineering and Technology logo">
           </div>
         </td>
-        <td style="padding: 2.5%; width: 85%; vertical-align: top;">
+        <td style="padding: 0.5% 2.5% 2.5% 2.5%; width: 85%; vertical-align: top;">
           <papertitle><big><b>B.Eng - NED University of Engineering and Technology</b></big></papertitle>
           <br>
-          Dec 2015 - Aug 2019
+          <span style="color: grey; font-size: 0.9em;">Karachi, Pakistan - Dec 2015 - Aug 2019</span>
           <br>
           <p align="justify">
             Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley,Heat Transfer)</a>
