simple edu added

--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -49,7 +49,7 @@
 </button>
 
 <div id="content-education" class="collapse in">
-  <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: collapse; margin-right: auto; margin-left: auto;">
+  <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: collapse; margin: auto;">
     <tbody>
       <tr>
         <td style="padding: 2.5% 2.5% 0 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
@@ -58,10 +58,9 @@
           </div>
         </td>
         <td style="padding: 2.5% 2.5% 0 2.5%; width: 85%; vertical-align: top;">
-          <papertitle><big><b>M.Sc - Technical University of Munich</b></big></papertitle>
-          <br>
-          <span style="color: grey; font-size: 0.9em;">Munich, Germany - Oct 2021 - Aug 2024</span>
-          <p align="justify" style="margin: 0;">
+          <span style="font-size: 1.2em; font-weight: bold;">M.Sc - Technical University of Munich</span>
+          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">Munich, Germany - Oct 2021 - Aug 2024</div>
+          <p align="justify" style="margin: 0; padding: 0;">
             Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
           </p>
         </td>
@@ -74,10 +73,9 @@
           </div>
         </td>
         <td style="padding: 0 2.5% 2.5% 2.5%; width: 85%; vertical-align: top;">
-          <papertitle><big><b>B.Eng - NED University of Engineering and Technology</b></big></papertitle>
-          <br>
-          <span style="color: grey; font-size: 0.9em;">Karachi, Pakistan - Dec 2015 - Aug 2019</span>
-          <p align="justify" style="margin: 0;">
+          <span style="font-size: 1.2em; font-weight: bold;">B.Eng - NED University of Engineering and Technology</span>
+          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">Karachi, Pakistan - Dec 2015 - Aug 2019</div>
+          <p align="justify" style="margin: 0; padding: 0;">
             Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
           </p>
         </td>
